fix: load takes too long, make individual fetch

--- a/apps/catalog-portal/app/catalogs/[[...catalogId]]/catalogs.module.css
+++ b/apps/catalog-portal/app/catalogs/[[...catalogId]]/catalogs.module.css
@@ -16,3 +16,7 @@
   margin-top: -0.5rem;
   margin-bottom: -1rem;
 }
+
+.cardSpinner > div {
+  margin: 0;
+}
